[tool.poetry]
name = "lib"
version = "0"
license = "mit"
description = "Download sticker packs from Telegram"
authors = ["FredHappyface"]
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Utilities",
]
homepage = "https://github.com/FredHappyface/Python.ActiveGithub"
repository = "https://github.com/FredHappyface/Python.ActiveGithub"
documentation = "https://github.com/FredHappyface/Python.ActiveGithub/blob/master/README.md"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
requests = "<3,>=2.26.0"
requests-cache = "<2,>=0.8.1"
urllib3 = "<2,>=1.26.7"


[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
indent = "Tab"

[tool.pydocstyle]
convention = "google"
ignore = "D205,D415"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.basic]
argument-naming-style = "camelCase"
attr-naming-style = "camelCase"
function-naming-style = "camelCase"
method-naming-style = "camelCase"
variable-naming-style = "camelCase"

[tool.pylint.format]
indent-string = "\t"

[tool.pylint.master]
ignore-paths = ["tests"]

[tool.pylint.messages_control]
enable = ["F", "E", "W", "R", "C"]
disable = ["pointless-string-statement", "superfluous-parens"]

[tool.tox]
legacy_tox_ini = """
[tox]
env_list =
	py311
	py310
	py39
	py38

[testenv]
deps = pytest
commands = pytest tests
"""
