[tool.poetry]
name = "lib"
version = "0"
license = "mit"
description = "Download sticker packs from Telegram"
authors = ["FredHappyface"]
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Utilities",
]
homepage = "https://github.com/FredHappyface/Python.ActiveGithub"
repository = "https://github.com/FredHappyface/Python.ActiveGithub"
documentation = "https://github.com/FredHappyface/Python.ActiveGithub/blob/master/README.md"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "<3,>=2.31.0"
requests-cache = "<2,>=1.2.0"
urllib3 = "<3,>=2.2.1"

[tool.poetry.group.dev.dependencies]
handsdown = "^2.1.0"
ruff = "^0.3.3"
pyright = "^1.1.356"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py38"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
	"ANN101",  # type annotation for self in method
	"COM812",  # enforce trailing comma
	"D2",  # pydocstyle formatting
	"ISC001",
	"N",  # pep8 naming
	"PLR09",  # pylint refactor too many
	"TCH",  # type check blocks
	"W191"  # ignore this to allow tabs
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs,tools}/*" = ["D", "S101", "E402"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all" # Disallow all relative imports.

[tool.ruff.format]
indent-style = "tab"
docstring-code-format = true
line-ending = "lf"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.coverage.run]
branch = true

[tool.tox]
legacy_tox_ini = """
[tox]
env_list =
	py311
	py310
	py39
	py38

[testenv]
deps = pytest
commands = pytest tests
"""
